@@ -17,7 +17,7 @@ LIB_PATCHLEVEL=2
 
 dnl libout123
 OUTAPI_VERSION=1
-OUTLIB_PATCHLEVEL=3
+OUTLIB_PATCHLEVEL=4
 
 dnl Since we want to be backwards compatible, both sides get set to API_VERSION.
 LIBMPG123_VERSION=$API_VERSION:$LIB_PATCHLEVEL:$API_VERSION
